--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development webpack --watch  --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "NODE_ENV=development webpack --watch --progress --hide-modules --watch-poll --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,13 @@
   "homepage": "https://github.com/Diogn/wp-udemy#readme",
   "dependencies": {
     "composer": "^4.1.0",
+    "laravel-mix": "^4.0.15",
     "timber": "^3.1.3"
   },
   "devDependencies": {
-    "tailwind": "^4.0.0"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^0.7.4"
   }
 }
